# herr_paint_project

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  config.json  rustfmt.toml
vaint/: Cargo.toml  readme.md
vaint/src/: app_handler.rs  lib.rs  main.rs  opengl_app.rs
vaint/src/app/egui/: mod.rs  shape.rs  states.rs  vaint_ui.rs
vaint/src/app/glium/: gl_window.rs  mod.rs
vaint/src/geometries/: circle.rs  mod.rs  shape.rs  square.rs
vaint/src/opengl/: color.rs  mod.rs  vertex.rs
vaint/src/support/: mod.rs
vaint/src/util/: algorithms.rs  fill.rs  tracing.rs
