
[workspace]
members = ["vaint"]
resolver = "3"

[workspace.dependencies]
derive_more = { version = "2.0.1", features = [
    "debug",
    "display",
    "error",
    "from",
    "into",
    "deref",
    "deref_mut",
    "as_ref",
] }
anyhow = "1.0.97"
derive_builder = "0.20.2"
dotenvy = "0.15.7"
itertools = "0.14.0"
thiserror = "2.0.12"
chrono = "0.4.40"
chrono-tz = { version = "0.10.3", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# uuid = "1.16.0"
# ulid = "1.2.1"
# serde-aux = "4.6.0"
# serde_json = "1.0.140"
# serde_with = "3.12.0"
# serde = "1.0.219"
# mime = "0.3.17"

[workspace.lints.rust]
dead_code = "allow"
