[package]
name = "vaint"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "lab_01"
[[bin]]
name = "lab_01_test"

[dependencies]
glium = "0.36.0"
glutin = "0.32.2"
glutin-winit = "0.5.0"
impls = "1.0.3"
image = "0.25.6"
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
